--- a/index.html
+++ b/index.html
@@ -4,173 +4,356 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-tours</title>
-    <link rel="icon" href="images/Logo.png" />
+    <link rel="icon" href="images/Icon.png" />
     <link rel="stylesheet" href="css/homeStyle.css" />
+    <!-- keyframes file -->
+    <link rel="stylesheet" href="css/keyframes.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Kaushan+Script&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
+    <!-- font awesome icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
-    <nav>
-      <img src="images/Logo.png" />
+    <div class="container">
+      <header>
+        <img class="logo" src="images/Logo.png" />
 
-      <div class="NavBar">
+        <div class="HeaderBar">
+          <ul>
+            <li class="e"><a href="#">Home</a></li>
+            <li class="e"><a href="#">Services</a></li>
+            <li class="e"><a href="#">Tours</a></li>
+            <li class="e"><a href="#">Contact us</a></li>
+          </ul>
+        </div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact us</a></li>
-          <li><a href="#">Login</a></li>
+          <li class="login"><a href="#">Login</a></li>
+          <li class="signup"><a href="#">Sign up</a></li>
         </ul>
+
+        <div class="searchDiv">
+          <form action="#" class="searchInput">
+            <input type="search" name="search" placeholder="Search..." />
+            <button type="submit"><img src="images/Search.png" /></button>
+          </form>
+        </div>
+      </header>
+      <!-- start of body -->
+      <div class="mainContainer">
+        <div class="section1">
+          <div class="sec1-content">
+            <div class="sec1-elements">
+              <p>DISCOVER THE NATURAL NEW TRAVEL</p>
+              <h1>Enjoy The <br />Best Moment Of Life</h1>
+              <!-- use link -->
+              <a href="#">Discover More</a>
+            </div>
+          </div>
+          <!-- reservation section -->
+          <div class="sec1-reservation">
+            <!-- box1 -->
+            <div class="boxes">
+              <!-- location icon -->
+              <i class="fa-solid fa-location-dot fa-2xl"></i>
+              <div class="menu">
+                <select name="Location">
+                  <option value="default" selected>Location</option>
+                  <option value="Siwa oasis">Siwa oasis</option>
+                  <option value="Luxor">Luxor</option>
+                  <option value="Aswan">Aswan</option>
+                </select>
+                <i class="fa-solid fa-caret-down"></i>
+              </div>
+            </div>
+            <!-- box2 -->
+            <div class="boxes"></div>
+            <!-- box3 -->
+            <div class="boxes"></div>
+            <!-- box4 -->
+            <div class="boxes"></div>
+          </div>
+        </div>
+        <div class="section2">
+          <div class="sec2-images"></div>
+          <div class="sec2-content">
+            <h2>We will make you happy <br />with our tour.</h2>
+            <p>
+              Our team of experienced travel experts meticulously design each
+              tour to ensure a perfect blend of exploration, relaxation, and
+              excitement. Personalized Experiences, We believe in tailoring
+              every trip to your preferences. Whether you're a thrill-seeker, a
+              culture enthusiast, or a relaxation aficionado, we've got you
+              covered.
+            </p>
+            <div class="sec2-links">
+              <!-- link here -->
+              <a href="">Book Now</a>
+              <!-- link here -->
+              <a href="">About More</a>
+            </div>
+          </div>
+        </div>
+        <!-- section 3 -->
+        <div class="section3">
+          <div class="sec3-list">
+            <h1>Best Features For You</h1>
+            <dl>
+              <dt>
+                <div>
+                  <i class="fa-solid fa-wifi fa-sm"></i>
+                  <h2>Free High Speed Wifi</h2>
+                </div>
+              </dt>
+              <dd>Stay connected with our complimentary high-speed WiFi.</dd>
+              <dt>
+                <div>
+                  <i class="fa-solid fa-suitcase-rolling fa-lg"></i>
+                  <h2>Free Storage Luggage</h2>
+                </div>
+              </dt>
+              <dd>
+                Enjoy the convenience of complimentary luggage storage during
+                your stay.
+              </dd>
+              <dt>
+                <div>
+                  <i class="fa-solid fa-burger fa-lg"></i>
+                  <h2>Free Snacks &amp; Delicious Meals</h2>
+                </div>
+              </dt>
+              <dd>
+                Indulge in our travel experience with delightful food service.
+                Our trips company offers a curated menu of delicious meals.
+              </dd>
+              <dt>
+                <div>
+                  <i class="fa-solid fa-tags fa-lg"></i>
+                  <h2>Exclusive Travel Discounts</h2>
+                </div>
+              </dt>
+              <dd>
+                Unlock special savings and exclusive discounts as our valued
+                traveler, making your journey even more affordable.
+              </dd>
+            </dl>
+          </div>
+          <div class="sec3-images">
+            <div class="sec3-single-img"></div>
+            <div class="sec3-single-img"></div>
+            <div class="sec3-single-img"></div>
+            <div class="sec3-single-img"></div>
+          </div>
+        </div>
+        <!-- section 4 -->
+        <div class="section4">
+          <div class="sec4-slider">
+            <h1>Top Destination</h1>
+            <div class="arrows">
+              <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
+              <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
+            </div>
+          </div>
+          <div class="sec4-cards-container">
+            <div class="sec4-card">
+              <div class="sec4-card-img">
+                <img src="images/sec4-img1.jpg" alt="No image" />
+              </div>
+              <div class="sec4-img-name">
+                <h2>Pyramids</h2>
+              </div>
+              <div class="sec4-img-location">
+                <div class="sec4-img-location-leftSide">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <a href="https://maps.app.goo.gl/2TeiVfKQSbx7EXTs7"
+                    >Cairo, Giza Governorate</a
+                  >
+                </div>
+                <div class="sec4-location-rate">
+                  <p>3.5</p>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+              </div>
+              <div class="sec4-img-price">
+                <p>&pound; 2500</p>
+                <!-- link here -->
+                <a href="#">Book Now</a>
+              </div>
+            </div>
+            <div class="sec4-card">
+              <div class="sec4-card-img">
+                <img src="images/sec4-img2.jpg" alt="No image" />
+              </div>
+              <div class="sec4-img-name">
+                <h2>Mosque of Rifai and Sultan Hassan</h2>
+              </div>
+              <div class="sec4-img-location">
+                <div class="sec4-img-location-leftSide">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <a href="https://maps.app.goo.gl/ixFWtLbyNTbmPJss6"
+                    >Cairo Governorate</a
+                  >
+                </div>
+                <div class="sec4-location-rate">
+                  <p>4</p>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+              </div>
+
+              <div class="sec4-img-price">
+                <p>&pound; 1100</p>
+                <!-- link here -->
+                <a href="#">Book Now</a>
+              </div>
+            </div>
+            <div class="sec4-card">
+              <div class="sec4-card-img">
+                <img src="images/sec4-img3.jpg" alt="No image" />
+              </div>
+              <div class="sec4-img-name">
+                <h2>Red Sea Mountains</h2>
+              </div>
+              <div class="sec4-img-location">
+                <div class="sec4-img-location-leftSide">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <a href="https://maps.app.goo.gl/p1Ko8tFcCkMuSHg4A"
+                    >Hurghada, Red Sea Governorate</a
+                  >
+                </div>
+                <div class="sec4-location-rate">
+                  <p>4.5</p>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+              </div>
+              <div class="sec4-img-price">
+                <p>&pound; 7000</p>
+                <!-- link here -->
+                <a href="#">Book Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- section 5 -->
+        <div class="section5">
+          <h1>Prepare yourself &amp; let's explore the beauty of the world.</h1>
+          <p>Start your digital adventure with forest.</p>
+          <!-- link hear -->
+          <a href="#">Get Started a Trip</a>
+        </div>
+        <!-- section 6 -->
+        <div class="section6">
+          <div class="sec6-img">
+            <img src="images/sec6-img1.jpg" alt="No image" />
+          </div>
+          <div class="sec6-content">
+            <h1>We Can Make Your Tour Most Enjoyable Holiday Ever</h1>
+            <p>
+              At our travel agency, we pride ourselves on our commitment to
+              making your tour the most enjoyable holiday ever. With meticulous
+              attention to detail and a passion for crafting unforgettable
+              experiences, we go above and beyond to ensure your journey is
+              nothing short of extraordinary.
+            </p>
+            <p>
+              From personalized itineraries that cater to your unique interests
+              to handpicking accommodations that provide comfort and luxury,
+              every aspect of your trip is carefully curated with your
+              satisfaction in mind.
+            </p>
+            <!-- link here -->
+            <a href="#">More About Us</a>
+          </div>
+        </div>
+
+        <!-- section 7 -->
+        <div class="section7">
+          <div class="sec7-containers">
+            <h2>2K</h2>
+            <p>Total Locations</p>
+          </div>
+          <div class="sec7-containers">
+            <h2>5K</h2>
+            <p>Travel Activity</p>
+          </div>
+          <div class="sec7-containers">
+            <h2>8K</h2>
+            <p>Tour packages</p>
+          </div>
+        </div>
+        <!-- section 8 -->
+        <div class="section8"></div>
+        <!-- section 9 -->
+        <div class="section9"></div>
       </div>
-      <div class="searchDiv">
-        <form action="#" class="searchInput">
-          <input type="search" name="search" placeholder="Search..." />
-          <button type="submit"><img src="images/Search.png" /></button>
-        </form>
-      </div>
-    </nav>
-    <div class="mainContainer">
-      <div class="blurDiv1">
-        <h1 id="welcome">Welcome to</h1>
-        <h1 id="etours">E-Tours</h1>
-      </div>
-      <div class="blurDiv2">
-        Embark on a journey of a lifetime with NileQuest Travel, your expert
-        guide to the treasures of Egypt. Discover the ancient wonders of the
-        pyramids, sail the legendary Nile, and unwind on the sun-kissed beaches
-        of the Red Sea. Our carefully curated packages, knowledgeable guides,
-        and seamless experiences ensure an unforgettable adventure.
-        <br />
-        <form action="#">
-          <button type="submit">Learn more</button>
-        </form>
-      </div>
+      <!-- end of body -->
     </div>
-
-    <!-- Khaled section -->
-    <section>
-      <div class="sectionContainer">
-        <!-- add -->
-        <div class="box">
-          <div class="image-container">
-            <img src="images/image 2.png" />
-          </div>
-          <div class="info">
-            <h2>Places To Visit</h2>
-            <p>
-              Egypt beckons with iconic Pyramids of Giza, Sphinx, Luxor's
-              ancient marvels, Cairo's Egyptian Museum, Aswan's High Dam, Abu
-              Simbel's temples, Alexandria's rich history, and Red Sea resorts
-              for sun and sea adventures. Discover Egypt's timeless allure.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="image-container">
-            <img src="images/image 3.png" />
-          </div>
-          <div class="info">
-            <h2>Transports</h2>
-            <p>
-              Explore with ease! Our company provides a variety of buses for all
-              travel needs — from spacious coaches for groups to sleek shuttles.
-              Enjoy a smooth journey in our reliable and well-maintained fleet
-              making your travel experience with us both convenient and
-              memorable.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="image-container">
-            <img src="images/image 4.png" />
-          </div>
-          <div class="info">
-            <h2>Food</h2>
-            <p>
-              Indulge in our travel experience with delightful food service. Our
-              trips company offers a curated menu of delicious meals, ensuring
-              you savor every moment of your journey. From snacks to gourmet
-              treats, we provide a culinary journey that complements your travel
-              adventure seamlessly.
-            </p>
-          </div>
-        </div>
-        <div class="button-container">
-          <button>Book Now</button>
-        </div>
-      </div>
-    </section>
-
-    <!-- Toaa -->
-
     <footer>
-      <div class="comp1">
-        <h4>About the company:</h4>
-        <br />
-        <p>
-          Explore Egypt with Egypt Explorer<br />
-          Tours. Unveil ancient wonders,<br />cruise the Nile, and create
-          lasting<br />
-          memories. Tailored adventures for every traveler.
-        </p>
-      </div>
-      <div class="comp2">
-        <h4>Company:</h4>
-        <br />
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Tours &amp; Packages</a></li>
-          <li><a href="#">Terms of Service</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-      </div>
-      <div class="comp3">
-        <h4>Contact:</h4>
-        <br />
-        <ul>
-          <li>Phone:<br />+20 108 164 1851</li>
-          <li>
-            Gmail:<br /><a href="mailto:etours@gmail.com">etours@gmail.com</a>
-          </li>
-          <li>Location:<br />10th of ramadan</li>
-        </ul>
-      </div>
-      <div class="social">
-        <h4>Follow us:</h4>
-        <br />
-        <ul>
-          <li>
-            <a href="https://instagram.com" target="_blank"
-              ><img src="images/instagram.png" width="55px"
-            /></a>
-          </li>
-          &nbsp;&nbsp;&nbsp;
-          <li>
-            <a href="https://facebook.com" target="_blank"
-              ><img src="images/Facebook.png" width="55px"
-            /></a>
-          </li>
-          <br />
-          <li>
-            <a href="https://x.com" target="_blank"
-              ><img src="images/X.png" width="55px"
-            /></a>
-          </li>
-          &nbsp;&nbsp;&nbsp;
-          <li>
-            <a href="https://gmail.com" target="_blank"
-              ><img src="images/Gmail.png" width="55px"
-            /></a>
-          </li>
-        </ul>
+      <div class="container">
+        <div class="f1">
+          <h1>About the company:</h1>
+          <p>
+            Explore Egypt with Egypt Explorer Tours. Unveil ancient wonders,
+            cruise the Nile, and create lasting memories. Tailored adventures
+            for every traveler.
+          </p>
+        </div>
+        <div class="f2">
+          <h1>Company:</h1>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Tours &amp; Packages</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="f3">
+          <h1>Contact:</h1>
+          <ul>
+            <li>Phone:<br />+20 108 164 1851</li>
+            <li>Gmail:<br /><a>etours@gmail.com</a></li>
+            <li>Location:<br />10th of ramadan</li>
+          </ul>
+        </div>
+        <div class="f4">
+          <h1>Follow us:</h1>
+          <ul>
+            <li>
+              <a href="https://instagram.com" target="_blank"
+                ><img src="images/instagram.png"
+              /></a>
+            </li>
+            <li>
+              <a href="https://facebook.com" target="_blank"
+                ><img src="images/Facebook.png"
+              /></a>
+            </li>
+            <br />
+            <li>
+              <a href="https://x.com" target="_blank"
+                ><img src="images/X.png"
+              /></a>
+            </li>
+            <li>
+              <a href="https://gmail.com" target="_blank"
+                ><img src="images/Gmail.png"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
-    <div class="copy">
+    <div class="rights">
       <p>&copy;2023 E-Tours | All rights reserved</p>
     </div>
   </body>
