add animation to sign in up

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -12,34 +12,47 @@
       href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Kaushan+Script&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
+    <!-- keyframes link -->
+    <link rel="stylesheet" href="../css/keyframes.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="logo">
-        <img src="../images/Logo.png" >
+        <img src="../images/Logo.png" />
       </div>
-        
+
       <div class="sign-up">
-        <div id ="hedder">
-          <img  src="..\images\Signup\Signup.png">
+        <div id="hedder">
+          <img src="..\images\Signup\Signup.png" />
         </div>
 
-        <p> Sign up </p>
+        <p>Sign up</p>
 
         <div class="inputs">
-          <input id="F-name" type="text" placeholder="First Name" required> 
-          <input id="L-name" type="text" placeholder="Last Name" required> <br>
-          <input id="Email" type="email" placeholder="Email" required> <br>
-          <input id="password" type="password" placeholder="Password" required ><br>
-          <input id="C-password" type="password" placeholder="Confirm Password" required ><br>
-          <input id="S-in" type="submit" value="Sign up">
+          <input id="F-name" type="text" placeholder="First Name" required />
+          <input id="L-name" type="text" placeholder="Last Name" required />
+          <br />
+          <input id="Email" type="email" placeholder="Email" required /> <br />
+          <input
+            id="password"
+            type="password"
+            placeholder="Password"
+            required
+          /><br />
+          <input
+            id="C-password"
+            type="password"
+            placeholder="Confirm Password"
+            required
+          /><br />
+          <input id="S-in" type="submit" value="Sign up" />
         </div>
 
         <div class="line">
-          <hr id="top">
-          <p >OR</p>
-          <hr id="bottom">
+          <hr id="top" />
+          <p>OR</p>
+          <hr id="bottom" />
         </div>
 
         <div id="text">
@@ -47,30 +60,24 @@
         </div>
 
         <div class="google">
-          <img src="..\images\Signup\GoogleIcon.png">
+          <img src="..\images\Signup\GoogleIcon.png" />
         </div>
 
-           <div id="google">
-            <a href="#">Cotinue with Google </a>          <br>
-           </div>
+        <div id="google"><a href="#">Cotinue with Google </a> <br /></div>
 
         <div class="apple">
-          <img src="..\images\Signup\AppleIcon.png">
+          <img src="..\images\Signup\AppleIcon.png" />
         </div>
 
-           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
-           </div>
+        <div id="apple">
+          <a href="#">Cotinue with Apple </a>
+        </div>
 
-           <div id="go">
-            <span>Got an account?</span>
-            <a href="#">Sign in</a>
-           </div>
-
-       </div>
-      
-
+        <div id="go">
+          <span>Got an account?</span>
+          <a href="#">Sign in</a>
+        </div>
+      </div>
     </div>
-
   </body>
 </html>
