--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -12,32 +12,39 @@
       href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Kaushan+Script&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
+    <!-- keyframes link -->
+    <link rel="stylesheet" href="../css/keyframes.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="logo">
-        <img src="../images/Logo.png" >
+        <img src="../images/Logo.png" />
       </div>
 
       <div class="login">
-        <div id ="hedder">
-          <img  src="..\images\login\login.png">
+        <div id="hedder">
+          <img src="..\images\login\login.png" />
         </div>
 
-        <p> Sign in </p>
+        <p>Sign in</p>
 
         <div class="inputs">
-          <input id="Email" type="email" placeholder="Email" required> <br>
-          <input id="password" type="password" placeholder="Password" required ><br>
-          <a href="https://fonts.googleapis.com">Forgot Password?</a><br>
-          <input id="S-in" type="submit" value="Login">
+          <input id="Email" type="email" placeholder="Email" required /> <br />
+          <input
+            id="password"
+            type="password"
+            placeholder="Password"
+            required
+          /><br />
+          <a href="https://fonts.googleapis.com">Forgot Password?</a><br />
+          <input id="S-in" type="submit" value="Login" />
         </div>
 
         <div class="line">
-          <hr id="top">
-          <p >OR</p>
-          <hr id="bottom">
+          <hr id="top" />
+          <p>OR</p>
+          <hr id="bottom" />
         </div>
 
         <div id="text">
@@ -45,32 +52,24 @@
         </div>
 
         <div class="google">
-          <img src="..\images\login\GoogleIcon.png">
+          <img src="..\images\login\GoogleIcon.png" />
         </div>
 
-           <div id="google">
-            <a href="#">Cotinue with Google </a>          <br>
-           </div>
+        <div id="google"><a href="#">Cotinue with Google </a> <br /></div>
 
         <div class="apple">
-          <img src="..\images\login\AppleIcon.png">
+          <img src="..\images\login\AppleIcon.png" />
         </div>
 
-           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
-           </div>
+        <div id="apple">
+          <a href="#">Cotinue with Apple </a>
+        </div>
 
-           <div id="go">
-           <span>no account?</span>
-           <a href="#">Sign up</a>
-           </div>
-
-       </div>
-      
-
-
-
-
+        <div id="go">
+          <span>no account?</span>
+          <a href="#">Sign up</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
