--- a/pages/Contact-us.html
+++ b/pages/Contact-us.html
@@ -23,14 +23,14 @@
       referrerpolicy="no-referrer"
     />
     <!-- keyframes link -->
-    <link rel="stylesheet" href="../css/keyframes.css">
+    <link rel="stylesheet" href="../css/keyframes.css" />
   </head>
 
   <body>
     <div class="container">
       <header>
         <img class="logo" src="../images/Logo.png" />
-  
+
         <div class="HeaderBar">
           <ul>
             <li class="e"><a href="../index.html">Home</a></li>
@@ -39,7 +39,7 @@
             <li class="e"><a href="../pages/About-us.html">about us</a></li>
           </ul>
         </div>
-  
+
         <div class="searchDiv">
           <form action="#" class="searchInput">
             <input type="search" name="search" placeholder="Search..." />
@@ -47,13 +47,11 @@
           </form>
         </div>
         <div class="ls">
-  
           <ul>
             <li class="login"><a href="../pages/sign-in.html">Login</a></li>
             <li class="signup"><a href="../pages/sign-up.html">Sign up</a></li>
           </ul>
         </div>
-  
       </header>
 
       <!-- start body -->
@@ -88,7 +86,7 @@
             </div>
             <input type="email" id="email" placeholder="Email" />
           </div>
-          <input type="text" placeholder="Message" />
+          <textarea cols="30" rows="10" placeholder="Message"></textarea>
           <div class="bottoms">
             <button>Submit</button>
             <p>or</p>
