--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Kanit:wght@300&family=Kaushan+Script&family=Lato&family=Roboto:wght@500&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
+
+    <!-- keyframes link -->
+    <link rel="stylesheet" href="../css/keyframes.css" />
   </head>
 
   <body>
