--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -63,29 +63,15 @@
           <img src="..\images\Signup\GoogleIcon.png" />
         </div>
 
-        <div id="google"><a href="#">Cotinue with Google </a> <br /></div>
+        <div id="google"><a href="#">Continue with Google </a> <br /></div>
 
         <div class="apple">
           <img src="..\images\Signup\AppleIcon.png" />
         </div>
 
-<<<<<<< HEAD
-           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
-           </div>
-
-           <div id="go">
-            <span>Got an account?</span>
-            <a href="../pages/sign-in.html">Sign in</a>
-           </div>
-
-       </div>
-      
-=======
         <div id="apple">
-          <a href="#">Cotinue with Apple </a>
+          <a href="#">Continue with Apple </a>
         </div>
->>>>>>> e49e3cafa0f38d36729f2bc7d155e29eb156836a
 
         <div id="go">
           <span>Got an account?</span>
