--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -19,40 +19,50 @@
   <body>
     <div class="container">
       <div class="logo">
-        <img src="../images/Logo.png" />
+        <img src="../images/Logo.png" >
       </div>
 
-      <div class="sign-up">
-        <div id="hedder">
-          <img src="..\images\Signup\Signup.png" />
+      <div class="Sign-up">
+        <div id ="hedder">
+          <img  src="..\images\login\login.png">
         </div>
 
-        <p>Sign up</p>
+        <p> Sign Up </p>
 
-        <div class="inputs">
-          <input id="F-name" type="text" placeholder="First Name" required />
-          <input id="L-name" type="text" placeholder="Last Name" required />
-          <br />
-          <input id="Email" type="email" placeholder="Email" required /> <br />
-          <input
-            id="password"
-            type="password"
-            placeholder="Password"
-            required
-          /><br />
-          <input
-            id="C-password"
-            type="password"
-            placeholder="Confirm Password"
-            required
-          /><br />
-          <input id="S-in" type="submit" value="Sign up" />
-        </div>
+        <form class="inputs">
+          <span class="F-name">
+            <input  type="text" required="required">
+            <label >First Name</label> 
+         </span>
+          <span class="L-name">
+            <input  type="text" required="required">
+            <label id="l-name">Last Name</label>
+          </span>
+          <div>
+             <input type="email" required="required"> 
+              <label >Email</label>                                          <br>
+          </div>
+
+          <div>
+             <input  type="password" required="required">
+              <label >Password</label>                                      <br>
+          </div>
+
+          <div>
+             <input  type="password" required="required">
+              <label >Confirm Password</label>                                      <br>
+          </div>
+
+          <div>
+              <input id="S-up" type="submit" name="submit" value="Sign Up">
+          </div>
+        
+        </form>
 
         <div class="line">
-          <hr id="top" />
-          <p>OR</p>
-          <hr id="bottom" />
+          <hr id="top">
+          <p >OR</p>
+          <hr id="bottom">
         </div>
 
         <div id="text">
@@ -60,38 +70,27 @@
         </div>
 
         <div class="google">
-          <img src="..\images\Signup\GoogleIcon.png" />
+          <div id="google">
+            <a href="#">Cotinue with Google </a>                             <br>
+          </div>
+          <img src="..\images\login\GoogleIcon.png">
         </div>
 
-        <div id="google"><a href="#">Cotinue with Google </a> <br /></div>
 
         <div class="apple">
-          <img src="..\images\Signup\AppleIcon.png" />
+          <div id="apple">
+            <a href="#">Cotinue with Apple </a> 
+          </div>
+          <img src="..\images\login\AppleIcon.png">
         </div>
 
-<<<<<<< HEAD
-           <div id="apple">
-            <a href="#">Cotinue with Apple </a> 
-           </div>
-
            <div id="go">
-            <span>Got an account?</span>
-            <a href="../pages/sign-in.html">Sign in</a>
+           <span> Got an account?</span>
+           <a href="../pages/sign-up.html">Sign in</a>
            </div>
 
        </div>
-      
-=======
-        <div id="apple">
-          <a href="#">Cotinue with Apple </a>
-        </div>
->>>>>>> e49e3cafa0f38d36729f2bc7d155e29eb156836a
 
-        <div id="go">
-          <span>Got an account?</span>
-          <a href="../pages/sign-in.html">Sign in</a>
-        </div>
-      </div>
     </div>
   </body>
 </html>
