--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <header>
         <img class="logo" src="images/Logo.png" />
-  
+
         <div class="HeaderBar">
           <ul>
             <li class="e"><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
             <li class="e"><a href="pages/About-us.html">about us</a></li>
           </ul>
         </div>
-  
+
         <div class="searchDiv">
           <form action="#" class="searchInput">
             <input type="search" name="search" placeholder="Search..." />
@@ -47,13 +47,11 @@
           </form>
         </div>
         <div class="ls">
-  
           <ul>
             <li class="login"><a href="pages/sign-in.html">Login</a></li>
             <li class="signup"><a href="pages/sign-up.html">Sign up</a></li>
           </ul>
         </div>
-  
       </header>
       <!-- start of body -->
       <div class="mainContainer">
@@ -140,7 +138,9 @@
               <!-- link here -->
               <a href="pages/Tours.html">Book Now</a>
               <!-- link here -->
-              <a href="pages/About-us.html">About More</a>
+              <a href="pages/About-us.html"
+                >About More <i class="fa-solid fa-arrow-right fa-xs"></i
+              ></a>
             </div>
           </div>
         </div>
