edit slides content to be in egypt and prices

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
               </div>
               <div class="sec4-img-price">
-                <p>&pound; 2500</p>
+                <p>&pound; 7500</p>
                 <!-- link here -->
                 <a href="pages/Tour-Booking.html">Book Now</a>
               </div>
@@ -445,10 +445,11 @@
                   </div>
                 </div>
                 <p>
-                  My adventure with Tripist in Asia was an absolute revelation.
-                  From the bustling streets of Bangkok to the tranquil rice
-                  fields of Bali, every moment was enchanting. The attention to
-                  detail in the itinerary was remarkable.
+                  My adventure with Tripist in Egypt was truly eye-opening. From
+                  the vibrant streets of Cairo to the serene landscapes along
+                  the Nile, every moment was captivating. The meticulous
+                  planning and attention to detail in the itinerary made the
+                  experience truly remarkable.
                 </p>
               </div>
             </div>
@@ -476,10 +477,11 @@
                   </div>
                 </div>
                 <p>
-                  My adventure with Tripist in Asia was an absolute revelation.
-                  From the bustling streets of Bangkok to the tranquil rice
-                  fields of Bali, every moment was enchanting. The attention to
-                  detail in the itinerary was remarkable.
+                  My adventure with Tripist in Egypt was truly eye-opening. From
+                  the vibrant streets of Cairo to the serene landscapes along
+                  the Nile, every moment was captivating. The meticulous
+                  planning and attention to detail in the itinerary made the
+                  experience truly remarkable.
                 </p>
               </div>
             </div>
